--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
       <p>Contenuto...</p>
       <button onclick="alertMessage()">Clicca qui</button> <!-- Pulsante che attiva una funzione JavaScript -->
 
-      <!-- <div class="contenitore">
+      <div class="contenitore">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
-      </div> -->
+      </div>
     </section>
 
     <section>
@@ -97,21 +97,21 @@
       <p>Altro contenuto...</p>
       <button id="myButton">Cliccami</button>
 
-      <!-- <div class="contenitore-verticale">
+      <div class="contenitore-verticale">
         <div class="box"></div>
         <div class="box"></div>
         <div class="box"></div>
-      </div> -->
+      </div>
     </section>
 
     <section>
       <h2>Sezione 3</h2>
       <p>Ultima sezione</p>
 
-      <!-- <div class="contenitore-elementi">
+      <div class="contenitore-elementi">
         <div class="elemento elemento-1"></div>
         <div class="elemento elemento-2"></div>
-      </div> -->
+      </div>
     </section>
   </main>  
 
